# pico-apps

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
assignments/assign01/: CMakeLists.txt  assign01.S  assign01.c  diagram.json  wokwi.toml
examples/blink_c/: CMakeLists.txt  blink_c.c
labs/lab01/: CMakeLists.txt  README.md  lab01.c  wokwi.toml
labs/lab02/: diagram.json  lab02.c  wokwi.toml
labs/lab03/: diagram.json  lab03.S  lab03.c  wokwi.toml
labs/lab05/: CMakeLists.txt  diagram.json  lab05.S  lab05.c  wokwi.toml
labs/lab06/: CMakeLists.txt  lab06.c
